2013-06-27 Pedro Vicente  <pvicente@uci.edu>

	* add a group use case for ncpdq in in_grp_3.cdl.

2013-06-27  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.2 release procedure:
 	Changes since nco-4_3_1: -X aux, ncflint/ncpdq -g -G --unn
	cd ~/nco;cvs tag -d nco-4_3_2;cvs tag -d nco-4_3_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.2 release"
	cvs tag -c nco-4_3_2;cvs tag -c nco-4_3_2-1

2013-06-25  Charlie Zender  <zender@uci.edu>

	* Mention implications of type promotion in memory requirements

	* Add Yellowstone default /ncar/opt/hpss/hsi to list of HSI search paths

	* Add NCO_MMR_DBG infrastructure for nco_malloc()
	Does not (yet) report requests made with nco_malloc_flg() and nco_malloc_dbg()
	export NCO_MMR_DBG=1;ncea -O -D 3 -d time,0,2 -p ~ big_bug5.nc ~/big_avg.nc

	* Replace many hardcoded dbg_lvl's with symbolic names

2013-06-24  Charlie Zender  <zender@uci.edu>

	* Prevent overwriting global attributes (like history) in ncecat, ncflint, ncpdq

2013-06-23  Charlie Zender  <zender@uci.edu>

	* Add nco_prc_stt_get() and nco_prc_stm_get() to poll /proc/PID/stat and /proc/PID/statm

2013-06-23 Pedro Vicente  <pvicente@uci.edu>

	* nco_var_dmn_rdr_mtd_trv() Determine and set new dimensionality in metadata of each re-ordered variable

	* nco_var_dmn_rdr_val_trv() Change dimension ordering of variable values

2013-06-22 Pedro Vicente  <pvicente@uci.edu>

	* Add ncpdq test #24 Reverse/Re-order 4D variable -a lev,time,-lon,-lat -v four_dmn_rec_var (MSA)
	* Add ncpdq test #25 Re-order all variables -a lat,time (MSA)

2013-06-21 Pedro Vicente  <pvicente@uci.edu>

	* Add ncpdq test #19 Reverse/Re-order 3D variable -a -lat,-time -v three_dmn_var_dbl
	* Add ncpdq test #20 Re-order several variables -a lat,time -v ty,three_dmn_rec_var (no MSA) Test 1
	* Add ncpdq test #21 Re-order several variables -a lat,time -v ty,three_dmn_rec_var (no MSA) Test 2
	* Add ncpdq test #22 Re-order several variables -a lat,time -v ty,three_dmn_rec_var (MSA) Test 1