@@ -1,5 +1,9 @@
 2013-06-27 Pedro Vicente  <pvicente@uci.edu>
 
+	* Add ncpdq test #24 
+
+2013-06-27 Pedro Vicente  <pvicente@uci.edu>
+
 	* add a group use case for ncpdq in in_grp_3.cdl.
 
 2013-06-27  Charlie Zender  <zender@uci.edu>
